fix: added dark border to connect button on hover for better visibility

--- a/main.css
+++ b/main.css
@@ -76,7 +76,7 @@ main {
 .connect:hover {
   background-color: #6a00ff;
   color: white;
-  border: black;
+  border: 1px solid black;
 }
 
 .modal {
